<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="it.wip.viewModel.StartStoryViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start_story_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_page_background"
        android:theme="@style/Theme.WIP">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            style="@style/LeftToRighTheme"
            android:contentDescription="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/back_arrow" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/story_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/new_story_title"
                    android:textColor="#E8EAF6"
                    android:textSize="24sp"/>

                <AutoCompleteTextView
                    android:id="@+id/story_title_set_by_the_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="story title set by the user"
                    android:background="@drawable/rectangular_background"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:fontFamily="@font/press_start_2p"
                    android:hint="@string/new_story_default"
                    android:inputType="text"
                    android:minHeight="66dp"
                    android:imeOptions="actionDone"
                    android:padding="20dp"
                    android:popupBackground="@color/blue_primary"
                    android:text="@{viewModel.storyName.toString()}"
                    android:textColor="#0277BD"
                    android:textColorHint="#0277BD" />

                <TextView
                    android:id="@+id/story_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/story_time_textview"
                    android:textAlignment="center"
                    android:textColor="#E8EAF6"
                    android:textSize="24sp" />

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rectangular_background">

                    <com.google.android.material.slider.Slider
                        android:id="@+id/seekBar_story_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/slider"
                        android:stepSize="10"
                        android:value="@{viewModel.studyTime}"
                        android:valueFrom="10"
                        android:valueTo="@{viewModel.maxStudyTimeGraphic}"
                        app:haloRadius="18dp"
                        app:thumbColor="#0277BD"
                        app:trackColorActive="#922196F3" />
                </FrameLayout>

                <TextView
                    android:id="@+id/optional_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/optional_settings_textview"
                    android:textColor="#E8EAF6"
                    android:textSize="24sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/wrapper_optional_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/switch_image_background"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/rectangular_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="ContentDescription" />

                    <ImageButton
                        android:id="@+id/info_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_marginBottom="67dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/info_button"
                        app:layout_constraintBottom_toBottomOf="@+id/switch_image_background"
                        app:layout_constraintEnd_toEndOf="@id/switch_image_background"
                        app:layout_constraintStart_toEndOf="@id/switch_silent_mode"
                        app:layout_constraintTop_toTopOf="@+id/switch_image_background"
                        app:layout_constraintVertical_bias="1.0"
                        app:srcCompat="@drawable/info_button"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    <Switch
                        android:id="@+id/switch_silent_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/press_start_2p"
                        android:minHeight="48dp"
                        android:text="@string/silent_mode"
                        android:textColor="#0277BD"
                        android:textSize="17sp"
                        android:thumbTint="#0277BD"
                        android:trackTint="@drawable/switch_track"
                        app:layout_constraintBottom_toBottomOf="@+id/switch_image_background"
                        app:layout_constraintEnd_toEndOf="@+id/switch_image_background"
                        app:layout_constraintHorizontal_bias="0.077"
                        app:layout_constraintStart_toStartOf="@+id/switch_image_background"
                        app:layout_constraintTop_toTopOf="@+id/switch_image_background"
                        app:layout_constraintVertical_bias="0.179"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                    <Switch
                        android:id="@+id/switch_hardcore_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/press_start_2p"
                        android:minHeight="48dp"
                        android:text="@string/hardcore_mode"
                        android:textColor="#0277BD"
                        android:textSize="17sp"
                        android:thumbTint="#0277BD"
                        android:trackTint="@drawable/switch_track"
                        app:layout_constraintBottom_toBottomOf="@+id/switch_image_background"
                        app:layout_constraintEnd_toEndOf="@+id/switch_image_background"
                        app:layout_constraintHorizontal_bias="0.077"
                        app:layout_constraintStart_toStartOf="@+id/switch_image_background"
                        app:layout_constraintTop_toBottomOf="@+id/switch_silent_mode"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/choose_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/choose_avatar_textview"
                    android:textAlignment="center"
                    android:textColor="#E8EAF6"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch_image_background"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/wrapper_choose_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/venere"
                        android:contentDescription="@string/avatar_description"
                        android:tag="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageButton
                        android:id="@+id/avatar_dx_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/avatar_dx_arrow"
                        android:minWidth="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/avatar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/avatar_dx_arrow" />

                    <ImageButton
                        android:id="@+id/avatar_sx_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="18dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/avatar_sx_arrow"
                        android:minWidth="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/avatar"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/avatar_sx_arrow" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageButton
                    android:id="@+id/start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/start_story_button"
                    android:minWidth="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatar"
                    app:layout_constraintVertical_bias="0.297"
                    app:srcCompat="@drawable/start_story_button" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>